--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <!-- Team Item Starts -->
             <div class="team-item text-center">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/grace.jpg" alt="">
+                <img class="img-fluid" src="assets/img/team/ray.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -332,17 +332,16 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Grace Feng</a></h3>
-                <p>Data Scientist</p>
+                <h3><a href="#">Ray Wang</a></h3>
+                <p>CEO</p>
               </div>
             </div>
-            <!-- Team Item Ends -->
           </div>
           <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
             <div class="team-item text-center">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/tian.jpg" alt="">
+                <img class="img-fluid" src="assets/img/team/kai.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -354,60 +353,13 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Tian Chen</a></h3>
-                <p>Research Scientist</p>
+                <h3><a href="#">Chengkai Zhang</a></h3>
+                <p>VP of Product</p>
               </div>
             </div>
             <!-- Team Item Ends -->
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-4">
-            <!-- Team Item Starts -->
-            <div class="team-item text-center">
-              <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/shanshan.jpg" alt="">
-                <div class="team-overlay">
-                  <div class="overlay-social-icon text-center">
-                    <ul class="social-icons">
-                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="info-text">
-                <h3><a href="#">Shanshan Li</a></h3>
-                <p>Software Engineer</p>
-              </div>
-            </div>
-            <!-- Team Item Ends -->
-          </div>
-          
-        </div>
-        <div class="row">
-          <div class="col-sm-6 col-md-6 col-lg-4">
-            <!-- Team Item Starts -->
-            <div class="team-item text-center">
-              <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/james.jpg" alt="">
-                <div class="team-overlay">
-                  <div class="overlay-social-icon text-center">
-                    <ul class="social-icons">
-                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="info-text">
-                <h3><a href="#">James Ji</a></h3>
-                <p>Marketing Executive</p>
-              </div>
-            </div>
-            <!-- Team Item Ends -->
-          </div>
           <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
             <div class="team-item text-center">
@@ -432,6 +384,73 @@
           </div>
 
           <div class="col-sm-6 col-md-6 col-lg-4">
+
+            <div class="team-item text-center">
+              <div class="team-img">
+                <img class="img-fluid" src="assets/img/team/grace.jpg" alt="">
+                <div class="team-overlay">
+                  <div class="overlay-social-icon text-center">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="info-text">
+                <h3><a href="#">Grace Feng</a></h3>
+                <p>Data Scientist</p>
+              </div>
+            </div>
+            <!-- Team Item Ends -->
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-4">
+            <!-- Team Item Starts -->
+            <div class="team-item text-center">
+              <div class="team-img">
+                <img class="img-fluid" src="assets/img/team/shanshan.jpg" alt="">
+                <div class="team-overlay">
+                  <div class="overlay-social-icon text-center">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="info-text">
+                <h3><a href="#">Shanshan Li</a></h3>
+                <p>Software Engineer</p>
+              </div>
+            </div>
+            <!-- Team Item Ends -->
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-4">
+            <!-- Team Item Starts -->
+            <div class="team-item text-center">
+              <div class="team-img">
+                <img class="img-fluid" src="assets/img/team/james.jpg" alt="">
+                <div class="team-overlay">
+                  <div class="overlay-social-icon text-center">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="info-text">
+                <h3><a href="#">James Ji</a></h3>
+                <p>Marketing Executive</p>
+              </div>
+            </div>
+            <!-- Team Item Ends -->
+          </div>
+
+          <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
             <div class="team-item text-center">
               <div class="team-img">
@@ -448,36 +467,12 @@
               </div>
               <div class="info-text">
                 <h3><a href="#">Allen Wu</a></h3>
-                <p>CTO</p>
+                <p>Software Engineer</p>
               </div>
             </div>
             <!-- Team Item Ends -->
           </div>
           
-        </div>
-        <div class="row">
-          <div class="col-sm-6 col-md-6 col-lg-4">
-            <!-- Team Item Starts -->
-            <div class="team-item text-center">
-              <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/kai.jpg" alt="">
-                <div class="team-overlay">
-                  <div class="overlay-social-icon text-center">
-                    <ul class="social-icons">
-                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="info-text">
-                <h3><a href="#">Chengkai Zhang</a></h3>
-                <p>VP of Product</p>
-              </div>
-            </div>
-            <!-- Team Item Ends -->
-          </div>
           <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
             <div class="team-item text-center">
