--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <!-- Responsive Style -->
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SG637EY5VK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-SG637EY5VK');
+    </script>
+    
 
   </head>
   <body>
@@ -467,7 +477,7 @@
               </div>
               <div class="info-text">
                 <h3><a href="#">Allen Wu</a></h3>
-                <p>Software Engineer</p>
+                <p>Software Engi</p>
               </div>
             </div>
             <!-- Team Item Ends -->
